--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "hardhat": "^2.9.9"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@openzeppelin/contracts": "^4.6.0",
+    "dotenv": "^16.0.1",
+    "hardhat-deploy": "^0.11.11"
   },
   "directories": {
     "test": "test"
